--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
+    <meta name="description" content="track product quality" />
     <meta name="author" content="Sipho Hlophe <psyphore@gmail.com>" />
-    <title>Cardinal QA</title>
+    <title>Cardinal Quality Manager</title>
     <base href="/" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
