feat: update header and footer spelling

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="track product quality" />
     <meta name="author" content="Sipho Hlophe <psyphore@gmail.com>" />
-    <title>Cardinal Quality Manager</title>
+    <title>Quality Manager</title>
     <base href="/" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
