chore: add markers - add e2e page object markers

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content="track product quality" />
-    <meta name="author" content="Sipho Hlophe <psyphore@gmail.com>" />
+    <meta name="author" content="Sipho Hlophe <psyphore.netlify.com>" />
     <title>Quality Manager</title>
     <base href="/" />
 
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="light">
     <app-root></app-root>
   </body>
 </html>
